# NekoImageGallery

./: .dockerignore  .gitignore  Dockerfile  cpu-only.Dockerfile  cpu.Dockerfile  cuda.Dockerfile  docker-compose-cpu.yml  docker-compose.yml  download-model.Dockerfile  main.py  pylintrc.toml  pyproject.toml  readme.md  readme_cn.md  requirement.txt  requirements.dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report---错误反馈.md  config.yml  feature-request---功能请求.md
.github/workflows/: docker-image.yml  jekyll-gh-pages.yml  prod.yml  test_lint.yml
app/: __init__.py  config.py  webapp.py
app/Controllers/: admin.py  files.py  images.py  search.py
app/Middleware/: presign_url.py
app/Models/: admin_api_model.py  api_model.py  db_queries.py  errors.py  img_data.py  mapped_image.py  query_params.py  search_result.py
app/Models/api_models/: admin_api_model.py  admin_query_params.py  search_api_model.py
app/Models/api_response/: admin_api_response.py  base.py  images_api_response.py  (+1 more)
app/Services/: __init__.py  authentication.py  cache_service.py  clip_service.py  index_service.py  lifespan_service.py  ocr_service.py  ocr_services.py  provider.py  transformers_service.py  upload_service.py  vector_db_context.py
app/util/: calculate_vectors_cosine.py  directories.py  fastapi_log_handler.py  generate_uuid.py  local_file_utility.py  retry_deco_async.py
config/: .gitignore  default.env
docs/: .gitignore  api.md  configurations.md  contributing.md  deployment.md  index.md  introduction.md  package-lock.json  package.json  screenshots.md
docs/.vitepress/: config.mts
docs/zh/: api.md  configurations.md  contributing.md  deployment.md  index.md  introduction.md  screenshots.md
scripts/: db_migrations.py  local_create_thumbnail.py  local_indexing.py  local_utility.py  qdrant_create_collection.py
tests/api/: conftest.py  integrate_test.py  test_home.py  test_search.py  test_upload.py
tests/assets/: __init__.py
tests/unit/: test_image_uuid.py  test_retry_deco.py  test_transformers_service.py
(+7 files in other folders)
