[project]
name = "NekoImageGallery"
version = "1.4.0"
description = "An AI-powered natural language & reverse Image Search Engine powered by CLIP & qdrant."
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiopath>=0.6.11",
    "fastapi>=0.110.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "opendal>=0.45.16",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.2",
    "qdrant-client>=1.9.2",
    "rich>=13.9.4",
    "typer>=0.15.2",
    "uvicorn[standard]>=0.34.0",
    "wcmatch>=10.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]

# All the dependencies that related to PyTorch goes here
[project.optional-dependencies]
cpu = [
    "torch>=2.6.0",
    "torchvision",
    "easypaddleocr>=0.3",
    "transformers>=4.49.0",
]
cu124 = [
    "torch>=2.6.0",
    "torchvision",
    "easypaddleocr>=0.3",
    "transformers>=4.49.0",
]
cu118 = [
    "torch>=2.6.0",
    "torchvision",
    "easypaddleocr>=0.3",
    "transformers>=4.49.0",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu124" },
        { extra = "cu118" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu118", extra = "cu118" }
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
    { index = "pytorch-cu118", extra = "cu118" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
